exports[`Testing node selectors get node with their attached ports 1`] = `
Object {
  "id1": Object {
    "node": Object {
      "attributes": undefined,
      "id": "id1",
      "nodeSize": undefined,
      "nodeType": undefined,
      "position": undefined,
    },
    "ports": Object {
      "id1": Object {
        "attributes": undefined,
        "id": "port1",
        "nodeId": "id1",
        "portType": undefined,
        "position": undefined,
      },
    },
  },
  "id2": Object {
    "node": Object {
      "attributes": undefined,
      "id": "id2",
      "nodeSize": undefined,
      "nodeType": undefined,
      "position": undefined,
    },
    "ports": Object {
      "id2": Object {
        "attributes": undefined,
        "id": "port2",
        "nodeId": "id2",
        "portType": undefined,
        "position": undefined,
      },
      "id3": Object {
        "attributes": undefined,
        "id": "port3",
        "nodeId": "id2",
        "portType": undefined,
        "position": undefined,
      },
      "id4": Object {
        "attributes": undefined,
        "id": "id4",
        "nodeId": "id2",
        "portType": undefined,
        "position": undefined,
      },
    },
  },
  "id3": Object {
    "node": Object {
      "attributes": undefined,
      "id": "id3",
      "nodeSize": undefined,
      "nodeType": undefined,
      "position": undefined,
    },
    "ports": Object {
      "id5": Object {
        "attributes": undefined,
        "id": "id5",
        "nodeId": "id3",
        "portType": undefined,
        "position": undefined,
      },
      "id6": Object {
        "attributes": undefined,
        "id": "id6",
        "nodeId": "id3",
        "portType": undefined,
        "position": undefined,
      },
    },
  },
  "id4": Object {
    "node": Object {
      "attributes": undefined,
      "id": "id4",
      "nodeSize": undefined,
      "nodeType": undefined,
      "position": undefined,
    },
    "ports": Object {
      "id7": Object {
        "attributes": undefined,
        "id": "id7",
        "nodeId": "id4",
        "portType": undefined,
        "position": undefined,
      },
      "id8": Object {
        "attributes": undefined,
        "id": "id8",
        "nodeId": "id4",
        "portType": undefined,
        "position": undefined,
      },
    },
  },
  "id5": Object {
    "node": Object {
      "attributes": undefined,
      "id": "id5",
      "nodeSize": undefined,
      "nodeType": undefined,
      "position": undefined,
    },
    "ports": Object {
      "id10": Object {
        "attributes": undefined,
        "id": "id10",
        "nodeId": "id5",
        "portType": undefined,
        "position": undefined,
      },
      "id9": Object {
        "attributes": undefined,
        "id": "id9",
        "nodeId": "id5",
        "portType": undefined,
        "position": undefined,
      },
    },
  },
  "id6": Object {
    "node": Object {
      "attributes": undefined,
      "id": "id6",
      "nodeSize": undefined,
      "nodeType": undefined,
      "position": undefined,
    },
    "ports": Object {
      "id11": Object {
        "attributes": undefined,
        "id": "id11",
        "nodeId": "id6",
        "portType": undefined,
        "position": undefined,
      },
      "id12": Object {
        "attributes": undefined,
        "id": "id12",
        "nodeId": "id6",
        "portType": undefined,
        "position": undefined,
      },
    },
  },
  "id7": Object {
    "node": Object {
      "attributes": undefined,
      "id": "id7",
      "nodeSize": undefined,
      "nodeType": undefined,
      "position": undefined,
    },
    "ports": Object {
      "id13": Object {
        "attributes": undefined,
        "id": "id13",
        "nodeId": "id7",
        "portType": undefined,
        "position": undefined,
      },
      "id14": Object {
        "attributes": undefined,
        "id": "id14",
        "nodeId": "id7",
        "portType": undefined,
        "position": undefined,
      },
      "id15": Object {
        "attributes": undefined,
        "id": "id15",
        "nodeId": "id7",
        "portType": undefined,
        "position": undefined,
      },
    },
  },
  "id8": Object {
    "node": Object {
      "attributes": undefined,
      "id": "id8",
      "nodeSize": undefined,
      "nodeType": undefined,
      "position": undefined,
    },
    "ports": Object {
      "id16": Object {
        "attributes": undefined,
        "id": "id16",
        "nodeId": "id8",
        "portType": undefined,
        "position": undefined,
      },
    },
  },
}
`;

exports[`Testing node selectors node1 should have 7 successors 1`] = `
Array [
  "id8",
  "id7",
  "id5",
  "id3",
  "id6",
  "id4",
  "id2",
]
`;

exports[`Testing node selectors node1 should not have any predecessors 1`] = `Array []`;

exports[`Testing node selectors node4 should have node1, node2 as predecessors 1`] = `
Array [
  "id1",
  "id2",
]
`;

exports[`Testing node selectors node4 should have node6, node7, node8 as successors 1`] = `
Array [
  "id8",
  "id7",
  "id6",
]
`;

exports[`Testing node selectors node8 should have 7 predecessors 1`] = `
Array [
  "id1",
  "id2",
  "id3",
  "id5",
  "id4",
  "id6",
  "id7",
]
`;

exports[`Testing node selectors node8 should not have any successors 1`] = `Array []`;
